force-app/main/default/objects/Permission__c/Permission__c.object-meta.xml
<CustomObject>
    <description>Permissions based on various Objects in Salesforce, used to gather information on user / user profile and permissions available on Salesforce.</description>
    <label>Permission</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Permission Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Permissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>