force-app/main/default/objects/Permission__c/fields/create__c.field-meta.xml
<CustomField>
    <fullName>create__c</fullName>
    <defaultValue>false</defaultValue>
    <description>ObjectPermissions  - Create</description>
    <label>create</label>
    <type>Checkbox</type>
</CustomField>