force-app/main/default/objects/Permission__c/fields/edit__c.field-meta.xml
<CustomField>
    <fullName>edit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>ObjectPermissions - Edit</description>
    <label>edit</label>
    <type>Checkbox</type>
</CustomField>