force-app/main/default/objects/Permission__c/fields/id__c.field-meta.xml
<CustomField>
    <fullName>id__c</fullName>
    <description>Object Permissions ID</description>
    <encryptionScheme>None</encryptionScheme>
    <label>id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>