force-app/main/default/objects/Permission__c/fields/modifyAll__c.field-meta.xml
<CustomField>
    <fullName>modifyAll__c</fullName>
    <defaultValue>false</defaultValue>
    <description>ObjectPermissions - ModifyAll</description>
    <label>modifyAll</label>
    <type>Checkbox</type>
</CustomField>