force-app/main/default/objects/Permission__c/fields/obj__c.field-meta.xml
<CustomField>
    <fullName>obj__c</fullName>
    <description>ObjectPermissions SobjectType</description>
    <encryptionScheme>None</encryptionScheme>
    <label>obj</label>
    <length>80</length>
    <type>Text</type>
</CustomField>