force-app/main/default/objects/Permission__c/fields/profile__c.field-meta.xml
<CustomField>
    <fullName>profile__c</fullName>
    <description>Profile Name</description>
    <encryptionScheme>None</encryptionScheme>
    <label>profile</label>
    <length>80</length>
    <type>Text</type>
</CustomField>