force-app/main/default/objects/Permission__c/fields/read__c.field-meta.xml
<CustomField>
    <fullName>read__c</fullName>
    <defaultValue>false</defaultValue>
    <description>ObjectPermissions  - Read</description>
    <label>read</label>
    <type>Checkbox</type>
</CustomField>