force-app/main/default/objects/Permission__c/fields/viewAll__c.field-meta.xml
<CustomField>
    <fullName>viewAll__c</fullName>
    <defaultValue>false</defaultValue>
    <description>ObjectPermissions  - ViewAll</description>
    <label>viewAll</label>
    <type>Checkbox</type>
</CustomField>